--- a/Internship/wordpress.html
+++ b/Internship/wordpress.html
@@ -34,7 +34,7 @@
       <div class="two">
         <h3>Your Earnings</h3>
         <section id="earning">
-          <h1>$<span>3000</span></h1>
+          <h1>$<span id="total">3000</span></h1>
         </section>
       </div>
     </div>
@@ -83,6 +83,17 @@
       background-color: #fff;
       box-shadow: -6px 8px 100px 0 rgba(0, 0, 0, .1);
     }
+    .block::before {
+      content: "";
+      background-color: #E9EBEF;
+      border-radius: 24px;
+      width: 500px;
+      height: 420px;
+      position: absolute;
+      left: -32px;
+      top: 48px;
+      z-index: -1;
+    }
   
     .one {
       display: grid;
@@ -106,7 +117,7 @@
       border-radius: 12px;
       font-weight: 600;
       text-align: center;
-      width: 60px;
+      width: 80px;
     }
   
     #earning {
@@ -152,17 +163,17 @@
     websites.addEventListener("click", function () {
       document.body.querySelector("#counter1").value = websites.value;
       let earnings = websites.value * price.value;
-      document.body.querySelector('span').innerText = earnings;
+      document.body.querySelector('#total').innerText = earnings;
     });
 
-    
+
     price.addEventListener("click", function () {
-      document.body.querySelector("#counter2").value = "$"+price.value;
+      document.body.querySelector("#counter2").value = "$" + price.value;
       let earnings = websites.value * price.value;
-      document.body.querySelector('span').innerText = earnings;
+      document.body.querySelector('#total').innerText = earnings;
     });
 
-    
+
   </script>
 </body>
 </html>
